Add query-key and query-function notes for better understanding

--- a/Notes/01.md
+++ b/Notes/01.md
@@ -6,5 +6,7 @@
   - the query function -> what fetches the data
   - See App.tsx in react-query-tutorial
 
-- 
-
+- Make sure to handle loading state, else it will error out
+  - option 1: use isSuccess and then show data
+  - option 2: use isLoading and then show loading state
+  - combine both(most resilient)
